Bug 158762 - Paragraph imported without numbering
Summary: Paragraph imported without numbering
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.3.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTF-Bullet-Number-Lists
  Show dependency treegraph
 
Reported: 2023-12-18 10:46 UTC by Oliver Specht (CIB)
Modified: 2023-12-22 13:03 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
rtf bugdoc with 3 numbered paragraphs (65.68 KB, application/msword)
2023-12-18 10:46 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2023-12-18 10:46:36 UTC
Created attachment 191481 [details]
rtf bugdoc with 3 numbered paragraphs

- Load the attached document
3 paragraphs should have a Roman numbering but only 2 are numbered.

Broken somewhere between 7.4.5.1 and 7.6.3.2
Comment 1 Gabor Kelemen (Collabora) 2023-12-19 08:25:19 UTC
Confirming.

This started to break in 7.5 with:

https://git.libreoffice.org/core/+/588ff9a228f4894142264c68392ed1e9800a4d7d

author	Vasily Melenchuk <vasily.melenchuk@cib.de>	Tue Dec 27 15:31:37 2022 +0300
committer	Miklos Vajna <vmiklos@collabora.com>	Tue Jan 10 07:15:00 2023 +0000
tree a95358eb0390b206106a2d98bb562519290bac9c
parent cff10826774a7767cacfb2bf8fef0eea94615627 [diff]

tdf#152784: RTF import: more default paragraph params
Comment 2 Commit Notification 2023-12-20 21:09:13 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fad76223d1cff3746a5d2e4ce56b93ecd1c80f61

tdf#158762 RTF writerfilter: fix list import

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-12-21 15:03:35 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/feb5b8b559bd46f2bdc9dfd85125d28cdd05dd37

tdf#158762 RTF writerfilter: fix list import

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gabor Kelemen (Collabora) 2023-12-22 13:03:20 UTC
Checked in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2eb428a8890dda29fbdc8b639fc1377080fab59f
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Now all 3 paragraphs appear as numbered.