tdf#158762 RTF writerfilter: fix list import

While importing the properties NumberingRules and NumberingStyleName
interfere with each other. Avoid overwriting NumberingRules with an
invalid NumberingStyleName.

Regression from 588ff9a228f4894142264c68392ed1e9800a4d7d

Change-Id: I706ea514da43faae0fdb9a2c0d4f5b1928ef55f8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160967
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>